--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,21 +1,146 @@
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="vn.edu.uit.floodpoint.Activity.MapsActivity" />
-    <android.support.design.widget.FloatingActionButton
-        android:src="@drawable/ic_done"
-        app:fabSize="normal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:id="@+id/layoutMap"
+        android:layout_above="@+id/layoutAdd"
+        android:layout_alignParentTop="true">
 
-</android.support.design.widget.CoordinatorLayout>
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/swFolow"
+            android:layout_marginTop="120dp"
+            app:layout_anchor="@+id/map"
+            app:layout_anchorGravity="right|end"
+            android:layout_marginEnd="5dp" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:src="@drawable/add"
+            android:id="@+id/fabMenu"
+            app:layout_anchor="@+id/map"
+            app:layout_anchorGravity="bottom|center_horizontal"
+            app:backgroundTint="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color" />
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="vn.edu.uit.floodpoint.Activity.MapsActivity" />
+
+        <fragment
+            android:id="@+id/place_autocomplete_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+            android:layout_margin="10dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            />
+    </android.support.design.widget.CoordinatorLayout>
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="250dp"
+        android:id="@+id/layoutAdd"
+        android:visibility="gone"
+        android:layout_alignParentBottom="true"
+        android:fillViewport="true">
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+                android:text="Thời gian ngập : "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtLasting"
+                android:layout_below="@+id/txtViewAdress" />
+
+            <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/rdgLasting"
+                android:orientation="horizontal"
+                android:layout_below="@+id/txtViewAdress"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_toEndOf="@+id/txtLasting"
+                android:layout_toRightOf="@+id/txtLasting">
+
+                <RadioButton
+                    android:text="2h"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rdTwoHours"
+                    android:layout_weight="1"
+                    android:checked="true" />
+
+                <RadioButton
+                    android:text="3h"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rdThreeHours"
+                    android:layout_weight="1" />
+
+                <RadioButton
+                    android:text="6h"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rdSixHours"
+                    android:layout_weight="1" />
+            </RadioGroup>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:id="@+id/imgViewPhoto"
+                android:padding="5dp"
+                android:layout_alignParentTop="true" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/txtViewName"
+                android:padding="5dp"
+                android:layout_below="@+id/rdgLasting"
+                android:hint="Title" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/txtDescription"
+                android:padding="5dp"
+                android:layout_below="@+id/txtViewName"
+                android:hint="Description" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtViewAdress"
+                android:padding="5dp"
+                android:layout_below="@+id/imgViewPhoto"
+                android:hint="Adress" />
+
+        </RelativeLayout>
+    </ScrollView>
+
+
+</RelativeLayout>
