--- a/app/src/main/res/layout/custom_info_contents.xml
+++ b/app/src/main/res/layout/custom_info_contents.xml
@@ -1,46 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layoutDirection="locale"
-    android:orientation="vertical"
-    android:layout_height="200dp"
-    android:layout_width="200dp">
-<RelativeLayout
-    android:layout_width="200dp"
-    android:layout_height="wrap_content">
+    android:orientation="vertical">
 
-    <ImageView
-        app:srcCompat="@drawable/add"
-        android:id="@+id/imgViewPhoto"
-        android:layout_below="@+id/txtViewAdress"
-        android:padding="5dp"
-        android:layout_width="200dp"
-        android:layout_height="120dp" />
+        <ImageView
+            android:id="@+id/imgViewPhoto"
+            android:layout_width="200dp"
+            android:layout_height="120dp"
+            android:layout_below="@+id/txtViewAdress"
+            android:padding="5dp"
+            app:srcCompat="@drawable/add" />
 
-    <TextView
-        android:text="TextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtViewAdress"
-        android:layout_alignParentTop="true"
-        android:padding="5dp" />
+        <TextView
+            android:id="@+id/txtViewAdress"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:padding="5dp"
+            android:text="TextView" />
 
-    <TextView
-        android:id="@+id/txtViewName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textColor="#ff000000"
-        android:textStyle="bold"
-        android:layout_below="@+id/imgViewPhoto"
-        android:padding="5dp" />
+        <TextView
+            android:id="@+id/txtViewName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imgViewPhoto"
+            android:layout_gravity="center_horizontal"
+            android:padding="5dp"
+            android:textColor="#ff000000"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/txtViewDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#ff7f7f7f"
-        android:layout_below="@+id/txtViewName"
-        android:padding="5dp" />
+        <TextView
+            android:id="@+id/txtViewDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/txtViewName"
+            android:padding="5dp"
+            android:singleLine="false"
+            android:textColor="#ff7f7f7f" />
 </RelativeLayout>
-</ScrollView>
